--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>welcome to nginx</title>
 </head>
 <body>
-<h1>  Hi Ritesh</h1>
-<p> default page changed to his name</p>
+<h1>  Hello Ritesh</h1>
+<p> Default Message of Nginx is Override </p>
 </body>
 </html
