--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>welcome to nginx</title>
+<title>welcome to telefonica </title>
 </head>
 <body>
 <h1>  Hello Ritesh</h1>
-<p> Default Message of Nginx is Override </p>
+<p> Customized docker image </p>
 </body>
 </html
